# ai-student-hub

./: .gitignore  CHANGELOG.md  HANDOFF.md  PLAN.md  README.md  package.json  start-netease.bat  start.bat
.changeset/: config.json
.github/workflows/: build-apps.yml
backend/: .env.example  .gitignore  migrate.py  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: ai.py  conversations.py  deps.py  music.py  notes.py  notifications.py  pomodoro.py  schedule.py  tasks.py
docs/: api-spec.md  architecture.md  coding-standards.md  database-schema.md  tasks.md
frontend/: .gitignore  capacitor.config.ts  package-lock.json  package.json
frontend-new/: index.html  package-lock.json  package.json  popup-chat.html  popup-notes.html  popup-pomodoro.html  vite.config.ts  wdio.conf.ts
frontend-new/src/: App.tsx  index.css
frontend-new/test-results/: .last-run.json
frontend-new/tests/: auxiliary-features.spec.ts  lyrics-viz.spec.ts  player-controls.spec.ts  playwright.config.ts  qr-login.spec.ts  search-shortcuts.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/lib/: db.ts  (+10 more)
netease-service/: package-lock.json  package.json  server.js
production/releases/: release-checklist-1.4.0.md
scripts/: convert_icon.py  create_shortcut.ps1  generate_icon.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
sync-server/: conflict-resolver.js  db.js  package-lock.json  package.json  server.js  sync-service.js  ws-client.js  ws-server.js
(+156 files in other folders)
